plugins {
	id 'eclipse'
	id 'java'
	id 'java-library'
	id 'maven-publish'
	id 'signing'
	id 'com.diffplug.spotless' version '6.25.0'
}

spotless {
	java {
		lineEndings = com.diffplug.spotless.LineEnding.UNIX
		eclipse('4.26')
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

java {
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
	withJavadocJar()
	withSourcesJar()
}

base {
	archivesName = "JavaCad"
}

File buildDir = file(".")
Properties props = new Properties()
props.load(new FileInputStream(buildDir.getAbsolutePath() + "/src/main/resources/com/neuronrobotics/javacad/build.properties"))

group = "com.neuronrobotics"
version = props."app.version"

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.compilerArgs += ['--enable-preview']
}

repositories {
	mavenCentral()
	mavenLocal()
	maven { url "https://clojars.org/repo" }
}

allprojects {
	tasks.withType(Javadoc).configureEach {
		options.addStringOption("encoding", "UTF-8")
		options.addStringOption('Xdoclint:none', '-quiet')
	}
}

dependencies {
	testImplementation group: 'junit', name: 'junit', version: '4.0'
	implementation 'commons-io:commons-io:2.7'
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation group: 'eu.mihosoft.vvecmath', name: 'vvecmath', version: '0.4.0'
	implementation group: 'javax.vecmath', name: 'vecmath', version: '1.5.2'
	implementation 'org.slf4j:slf4j-simple:1.6.1'
	implementation group: 'org.apache.xmlgraphics', name: 'batik-all', version: '1.17'
	implementation fileTree(dir: 'libs', includes: ['kabeja*.jar'])
	implementation group: 'org.locationtech.jts', name: 'jts-core', version: '1.20.0'
	implementation 'com.aparapi:aparapi:3.0.2'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.80'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.80'
	implementation("com.github.madhephaestus:manifold3d:v3.4.1-17")
}

Date buildTimeAndDate = new Date()
ext {
	buildDate = new java.text.SimpleDateFormat('yyyy-MM-dd').format(buildTimeAndDate)
	buildTime = new java.text.SimpleDateFormat('HH:mm:ss.SSSZ').format(buildTimeAndDate)
}

tasks.withType(Test).configureEach {
	jvmArgs '--enable-preview'
}

tasks.withType(JavaExec).configureEach {
	jvmArgs '--enable-preview'
}

test {
	dependsOn 'spotlessApply'
	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
		showStandardStreams = true
		exceptionFormat = "full"
		showExceptions = true
		showCauses = true
		showStackTraces = true
	}
}

publishing {
	repositories {
		maven {
			name = "OSSRH"
			url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
			credentials {
				username = System.getenv("MAVEN_USERNAME")
				password = System.getenv("MAVEN_PASSWORD")
			}
		}
	}
	publications {
		mavenJava(MavenPublication) {
			from components.java
			artifactId = 'JavaCad'
			pom {
				name = 'JavaCad'
				packaging = 'jar'
				description = 'A Java based CSG Cad library'
				url = 'https://github.com/NeuronRobotics/JavaCad'
				scm {
					connection = 'scm:git:https://github.com/NeuronRobotics/JavaCad'
					developerConnection = 'scm:git:https://github.com/NeuronRobotics/JavaCad'
					url = 'https://github.com/NeuronRobotics/JavaCad'
				}
				licenses {
					license {
						name = 'The Apache License, Version 2.0'
						url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
					}
				}
				developers {
					developer {
						id = 'madhephaestus'
						name = 'Kevin Harrington'
						email = 'kharrington@neuronrobotics.com'
					}
				}
			}
		}
	}
}

signing {
	sign publishing.publications.mavenJava
}

javadoc {
	if (JavaVersion.current().isJava9Compatible()) {
		options.addBooleanOption('html5', true)
	}
}